[tool.poetry]
name = "poetry-hw"
version = "0.1.0"
description = ""
authors = ["Aleksei <trrskv@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_hw"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
selene = "^2.0.0b16"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts= "-l --durations=10 -vv"
markers= ["my_mark"]
